# zed

./: .gitmodules  CMakeLists.txt  NOTES.md
Zed/: CMakeLists.txt  Zed.cpp  Zed.h
ZedCli/: CMakeLists.txt  ZedCli.cpp
ZedUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  SimpleConcurrentQueue.h  ZedUI.pro  main.cpp
